add filters to template

--- a/project1/organizer/templates/organizer/tag_detail.html
+++ b/project1/organizer/templates/organizer/tag_detail.html
@@ -1,8 +1,8 @@
-<h2>{{ tag.name }}</h2>
+<h2>{{ tag.name|title }}</h2>
 
 {% if tag.startup_set.all %}
 <section>
-<h3>Startups</h3>
+<h3>Startups{{ tag.startup_set.count|pluralize }}</h3>
 	<ul>
 	{% for startup in tag.startup_set.all %}
 		<li><a href="">
@@ -15,11 +15,11 @@
 
 {% if tag.blog_posts.all %}
 <section>
-<h3>Blog Posts</h3>
+<h3>Blog Post{{ tag.blog_posts.count|pluralize }</h3>
 	<ul>	
 	{% for post in tag.blog_posts.all %}
  		<li><a href="">
- 		{{ post.title }}
+ 		{{ post.title|title}}
  		</a></li>
  	{% endfor %}
  	</ul>
