--- a/project1/organizer/templates/organizer/tag_detail.html
+++ b/project1/organizer/templates/organizer/tag_detail.html
@@ -2,7 +2,7 @@
 
 {% if tag.startup_set.all %}
 <section>
-<h3>Startups{{ tag.startup_set.count|pluralize }}</h3>
+<h3>Startup{{ tag.startup_set.count|pluralize }}</h3>
 	<ul>
 	{% for startup in tag.startup_set.all %}
 		<li><a href="">
@@ -15,7 +15,7 @@
 
 {% if tag.blog_posts.all %}
 <section>
-<h3>Blog Post{{ tag.blog_posts.count|pluralize }</h3>
+<h3>Blog Post{{ tag.blog_posts.count|pluralize }}</h3>
 	<ul>	
 	{% for post in tag.blog_posts.all %}
  		<li><a href="">
